🐛  FIX: hide footer on mobile

--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -146,6 +146,7 @@ button:active {
 
     .bg-select {
         width: 30%;
+        display: none;
     }
 }
 
@@ -164,5 +165,6 @@ button:active {
 
     .bg-select {
         width: 30%;
+        display: none;
     }
 }
